--- a/portfolio/public/manifest.json
+++ b/portfolio/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "PLWTX",
+  "name": "冥王星'サイト",
   "icons": [
     {
       "src": "favicon.ico",
